# pluto

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  BUG6_ANALYSIS.md  BUG6_PLAN.md  BUGS_AND_FEATURES.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.release  FEATURES.md  LEXER-FIXES.md  PHASE2_IMPLEMENTATION.md  PROPERTY-TESTS.md  README.md  ROADMAP.md  SPEC.md  TESTING-SUMMARY.md  TYPECK_PR46_SUMMARY.md  coverage-badge.json  docker-compose.yml  docker-test.sh  index.html  test_extern.pluto  test_http.pluto  test_import_log.pluto  test_kind.pluto  test_minimal.pluto  test_reflection.pluto
.config/: nextest.toml
.github/workflows/: benchmarks.yml  build.yml  ci.yml  deploy-book.yml  docker.yml  lint-ast-walkers.yml  nightly.yml  pages.yml  test.yml
.pluto-cache/test-hashes/: _Users_matthewkerian_Documents_pluto-projects_lagrange_benchmarks_latency_latency_bench.pluto.json  _Users_matthewkerian_Documents_pluto-projects_lagrange_benchmarks_test_nosrc.pluto.json  _Users_matthewkerian_Documents_pluto-projects_lagrange_benchmarks_throughput_throughput_bench.pluto.json  _Users_matthewkerian_Documents_pluto-projects_lagrange_tests_consumer_consumer_test.pluto.json  _Users_matthewkerian_Documents_pluto-projects_lagrange_tests_helpers_helpers_test.pluto.json  _Users_matthewkerian_Documents_pluto-projects_lagrange_tests_metrics_metrics_test.pluto.json  _Users_matthewkerian_Documents_pluto-projects_lagrange_tests_protocol_protocol_test.pluto.json  _Users_matthewkerian_Documents_pluto-projects_lagrange_tests_retention_retention_test.pluto.json  _Users_matthewkerian_Documents_pluto-projects_lagrange_tests_server_server_test.pluto.json  _Users_matthewkerian_Documents_pluto-projects_lagrange_tests_storage_storage_test.pluto.json  _Users_matthewkerian_Documents_pluto-projects_meridian_tests_aggregator_aggregator_test.pluto.json  _Users_matthewkerian_Documents_pluto-projects_meridian_tests_codec_codec_test.pluto.json  _Users_matthewkerian_Documents_pluto-projects_meridian_tests_helpers_helpers_test.pluto.json  _Users_matthewkerian_Documents_pluto-projects_meridian_tests_labels_labels_test.pluto.json  _Users_matthewkerian_Documents_pluto-projects_meridian_tests_registry_registry_test.pluto.json  _Users_matthewkerian_Documents_pluto-projects_orrery_tests_markdown_markdown_test.pluto.json  _Users_matthewkerian_Documents_pluto-projects_orrery_tests_templates_templates_test.pluto.json  _Users_matthewkerian_Documents_pluto_examples_testing_main.pluto.json
analysis/: ERROR_MESSAGE_AUDIT_REPORT.md  error_message_audit.csv  error_sites.csv
benches/: compile_time.rs  visitor_overhead.rs
benches/testdata/: large_program.pluto
benchmarks/: BENCHMARKS.md  array_iter.pluto  array_push.pluto  bounce.pluto  class_method.pluto  closure_call.pluto  compare.sh  fannkuch_redux.pluto  fft.pluto  fib.pluto  gc_binary_trees.pluto  gc_churn.pluto  gc_string_pressure.pluto  json_parse.pluto  list.pluto  loop_sum.pluto  lu.pluto  mandelbrot.pluto  monte_carlo.pluto  nbody.pluto  permute.pluto  queens.pluto  run_benchmarks.sh  sieve.pluto  sor.pluto  sparse_matmul.pluto  spectral_norm.pluto  storage.pluto  string_concat.pluto  towers.pluto  trait_dispatch.pluto
benchmarks/report/: index.html
book/: README.md  book.toml
book/src/: SUMMARY.md  introduction.md  taste.md  vision.md
bug6_test/: trigger_crash.pluto
bugs/: LEXER-SUMMARY.md  README.md  TEMPLATE_BUG_REPORT.md  TEMPLATE_IMPLEMENTATION.md  TEMPLATE_INVESTIGATION.md  WORKFLOW.md  lexer-gaps.md  nested-field-access-workaround.md  nested-field-access.md  parser-agent2.md
coverage/: coverage-summary.txt  index.html
docs/: gc-soundness-analysis.md  mcp-best-practices.md  mcp-server.md
docs/bugs/: COMPILER-BUGS.md  NEXT-STEPS.md
docs/checklists/: add-ast-variant.md
docs/completed/: README.md
docs/design/: ai-native-representation.md  channels.md  communication.md  compilation.md  compiler-runtime-abi.md  concurrency.md  contracts.md  control-flow.md  dependency-injection.md  error-handling.md  implementation-plan-safety-stack.md  mutability.md  open-questions.md  orchestration.md  program-structure.md  rfc-ai-native-pipeline.md  rfc-compiler-metrics.md  rfc-comprehensive-testing.md  rfc-concurrency-v2.md  rfc-core-coverage.md  rfc-deterministic-concurrency-testing.md  rfc-di-lifecycle-phases.md  rfc-di-lifecycle.md  rfc-entry-points.md  rfc-fuzzing-stress.md  rfc-iterative-dev.md  rfc-rpc-implementation.md  rfc-string-literals.md  rfc-test-infrastructure.md  rfc-testing-strategy.md  rfc-visitor-pattern.md  rfc-wire-format.md  runtime-architecture.md  runtime.md  scope-tracker-examples.md  test-implementation-plan.md  toolchain-implementation-plan.md  type-system.md  visitor-composition-examples.md  visitor-decision-tree.md  (+2 more)
docs/testing/: parser-bugfix-summary.md  parser-test-investigation.md  parser-test-plan-extended.md  parser-test-summary.md  runtime-error-exhaustive-inventory.md  runtime-error-state-analysis.md  runtime-error-testing-results.md
examples/: README.md  add.pluto  arrays.pluto  if_expressions.pt  point.pluto  reflection_demo.pluto  strings.pluto  traits.pluto
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lex.rs  parse.rs
fuzzing/: lex.html  parse.html
mcp/: Cargo.toml
mcp/src/: docs.rs  lib.rs  main.rs  serialize.rs  server.rs  tools.rs
mcp/tests/: phase1_features.rs  phase2_compile_tools.rs  phase3_write_tools.rs  phase4_format_tools.rs
runtime/: builtins.c  builtins.h  coverage.c  gc.c  threading.c
scripts/: audit_error_messages.py  test_toolchain.sh  upgrade_test_expectations.py
sdk/: Cargo.toml
sdk/src/: decl.rs  (+6 more)
src/: ambient.rs  binary.rs  closures.rs  comp_cache.rs  concurrency.rs  content_hash.rs  contracts.rs  coverage.rs  coverage_template.html  decl_key.rs  depgraph.rs  derived.rs  docs.rs  git_cache.rs  lib.rs  main.rs  manifest.rs  marshal.rs  modules.rs  monomorphize.rs  plto_store.rs  prelude.rs  pretty.rs  reflection.rs  span.rs  spawn.rs  stages.rs  sync.rs  toolchain.rs  visit.rs  watch.rs  xref.rs
stdlib/: prelude.pluto
tests/: codegen_tests.rs  property_tests.rs
(+598 files in other folders)
