[package]
name = "plutoc"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.14"
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
clap = { version = "4", features = ["derive"] }
ariadne = "0.4"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "basics"
path = "tests/integration/basics.rs"

[[test]]
name = "operators"
path = "tests/integration/operators.rs"

[[test]]
name = "control_flow"
path = "tests/integration/control_flow.rs"

[[test]]
name = "strings"
path = "tests/integration/strings.rs"

[[test]]
name = "arrays"
path = "tests/integration/arrays.rs"

[[test]]
name = "classes"
path = "tests/integration/classes.rs"

[[test]]
name = "traits"
path = "tests/integration/traits.rs"

[[test]]
name = "enums"
path = "tests/integration/enums.rs"

[[test]]
name = "closures"
path = "tests/integration/closures.rs"

[[test]]
name = "di"
path = "tests/integration/di.rs"

[[test]]
name = "errors"
path = "tests/integration/errors.rs"

[[test]]
name = "generics"
path = "tests/integration/generics.rs"

[[test]]
name = "modules"
path = "tests/integration/modules.rs"

[[test]]
name = "prelude"
path = "tests/integration/prelude.rs"
