[workspace]
members = [".", "sdk", "mcp"]
exclude = ["tests/fixtures/test_math_crate"]
resolver = "2"

[package]
name = "plutoc"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.14"
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
clap = { version = "4", features = ["derive"] }
ariadne = "0.4"
thiserror = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
bincode = { version = "2", features = ["serde"] }
notify = "6.1"
crossbeam-channel = "0.5"
clearscreen = "2.0"
nix = { version = "0.27", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
proptest = "1.0"
insta = "1.34"
criterion = "0.5"
arbitrary = "1.3"

[[test]]
name = "basics"
path = "tests/integration/basics.rs"

[[test]]
name = "operators"
path = "tests/integration/operators.rs"

[[test]]
name = "control_flow"
path = "tests/integration/control_flow.rs"

[[test]]
name = "strings"
path = "tests/integration/strings.rs"

[[test]]
name = "arrays"
path = "tests/integration/arrays.rs"

[[test]]
name = "classes"
path = "tests/integration/classes.rs"

[[test]]
name = "traits"
path = "tests/integration/traits.rs"

[[test]]
name = "enums"
path = "tests/integration/enums.rs"

[[test]]
name = "closures"
path = "tests/integration/closures.rs"

[[test]]
name = "di"
path = "tests/integration/di.rs"

[[test]]
name = "errors"
path = "tests/integration/errors.rs"

[[test]]
name = "generics"
path = "tests/integration/generics.rs"

[[test]]
name = "modules"
path = "tests/integration/modules.rs"

[[test]]
name = "mutability"
path = "tests/integration/mutability.rs"

[[test]]
name = "prelude"
path = "tests/integration/prelude.rs"

[[test]]
name = "gc"
path = "tests/integration/gc.rs"

[[test]]
name = "maps"
path = "tests/integration/maps.rs"

[[test]]
name = "sets"
path = "tests/integration/sets.rs"

[[test]]
name = "numeric"
path = "tests/integration/numeric.rs"

[[test]]
name = "fs"
path = "tests/integration/fs.rs"

[[test]]
name = "testing"
path = "tests/integration/testing.rs"

[[test]]
name = "stdlib_tests"
path = "tests/integration/stdlib_tests.rs"

[[test]]
name = "json_tests"
path = "tests/integration/json_tests.rs"

[[test]]
name = "http_tests"
path = "tests/integration/http_tests.rs"

[[test]]
name = "concurrency"
path = "tests/integration/concurrency.rs"

[[test]]
name = "bytes"
path = "tests/integration/bytes.rs"

[[test]]
name = "channels"
path = "tests/integration/channels.rs"

[[test]]
name = "manifest"
path = "tests/integration/manifest.rs"

[[test]]
name = "contracts"
path = "tests/integration/contracts.rs"

[[test]]
name = "io"
path = "tests/integration/io.rs"

[[test]]
name = "di_lifecycle"
path = "tests/integration/di_lifecycle.rs"

[[test]]
name = "warnings"
path = "tests/integration/warnings.rs"

[[test]]
name = "nullable"
path = "tests/integration/nullable.rs"

[[test]]
name = "sync"
path = "tests/integration/sync.rs"

[[test]]
name = "scope_blocks"
path = "tests/integration/scope_blocks.rs"

[[test]]
name = "system"
path = "tests/integration/system.rs"

[[test]]
name = "deterministic"
path = "tests/integration/deterministic.rs"

[[test]]
name = "stages"
path = "tests/integration/stages.rs"

[[test]]
name = "generators"
path = "tests/integration/generators.rs"

[[test]]
name = "wire"
path = "tests/integration/wire.rs"

[[test]]
name = "marshaling"
path = "tests/integration/marshaling.rs"

[[test]]
name = "ast"
path = "tests/property/ast.rs"

[[test]]
name = "error_snapshots"
path = "tests/integration/error_snapshots.rs"

[[test]]
name = "error_messages"
path = "tests/integration/error_messages.rs"

[[test]]
name = "lexer_tests"
path = "tests/integration/lexer_tests.rs"

[[test]]
name = "rpc"
path = "tests/integration/rpc.rs"

[[test]]
name = "parser_precedence"
path = "tests/integration/precedence.rs"

[[test]]
name = "parser_generics"
path = "tests/integration/generics_syntax.rs"

[[test]]
name = "parser_arrows"
path = "tests/integration/arrow_functions.rs"

[[test]]
name = "parser_structs"
path = "tests/integration/struct_literals.rs"

[[test]]
name = "parser_edges"
path = "tests/integration/edge_cases.rs"

[[test]]
name = "parser_property"
path = "tests/property/parser.rs"

[[test]]
name = "precedence_extended"
path = "tests/integration/precedence_extended.rs"

[[test]]
name = "expression_complexity"
path = "tests/integration/expression_complexity.rs"

[[test]]
name = "error_recovery"
path = "tests/integration/error_recovery.rs"

[[test]]
name = "type_syntax"
path = "tests/integration/type_syntax.rs"

[[test]]
name = "literal_parsing"
path = "tests/integration/literal_parsing.rs"

[[test]]
name = "statement_boundaries"
path = "tests/integration/statement_boundaries.rs"

[[test]]
name = "control_flow_extended"
path = "tests/integration/control_flow_extended.rs"

# Typeck edge case tests - inference category
[[test]]
name = "typeck_binop_type_mismatches"
path = "tests/typeck/inference/binop_type_mismatches.rs"

[[test]]
name = "typeck_index_type_errors"
path = "tests/typeck/inference/index_type_errors.rs"

[[test]]
name = "typeck_field_access_errors"
path = "tests/typeck/inference/field_access_errors.rs"

[[test]]
name = "typeck_cast_errors"
path = "tests/typeck/inference/cast_errors.rs"

[[test]]
name = "typeck_empty_array_inference"
path = "tests/typeck/inference/empty_array_inference.rs"

[[test]]
name = "typeck_method_resolution_errors"
path = "tests/typeck/inference/method_resolution_errors.rs"

[[test]]
name = "typeck_spawn_validation"
path = "tests/typeck/inference/spawn_validation.rs"

[[test]]
name = "typeck_string_interpolation"
path = "tests/typeck/inference/string_interpolation.rs"

[[test]]
name = "typeck_closure_inference"
path = "tests/typeck/inference/closure_inference.rs"

[[test]]
name = "typeck_unary_op_errors"
path = "tests/typeck/inference/unary_op_errors.rs"

# Typeck edge case tests - trait conformance category
[[test]]
name = "typeck_method_signature_mismatch"
path = "tests/typeck/traits/method_signature_mismatch.rs"

[[test]]
name = "typeck_missing_methods"
path = "tests/typeck/traits/missing_methods.rs"

[[test]]
name = "typeck_liskov_violations"
path = "tests/typeck/traits/liskov_violations.rs"

[[test]]
name = "typeck_multiple_trait_impls"
path = "tests/typeck/traits/multiple_trait_impls.rs"

[[test]]
name = "typeck_trait_object_errors"
path = "tests/typeck/traits/trait_object_errors.rs"

[[test]]
name = "typeck_generic_trait_errors"
path = "tests/typeck/traits/generic_trait_errors.rs"

# Typeck edge case tests - nullable types category
[[test]]
name = "typeck_nested_nullable"
path = "tests/typeck/nullable/nested_nullable.rs"

[[test]]
name = "typeck_void_nullable"
path = "tests/typeck/nullable/void_nullable.rs"

[[test]]
name = "typeck_implicit_wrapping"
path = "tests/typeck/nullable/implicit_wrapping.rs"

[[test]]
name = "typeck_none_inference"
path = "tests/typeck/nullable/none_inference.rs"

[[test]]
name = "typeck_nullable_propagation_chain"
path = "tests/typeck/nullable/propagation_chain.rs"

[[test]]
name = "typeck_nullable_in_containers"
path = "tests/typeck/nullable/in_containers.rs"

[[test]]
name = "typeck_nullable_with_generics"
path = "tests/typeck/nullable/with_generics.rs"

# Typeck edge case tests - generics category
[[test]]
name = "typeck_type_bounds_validation"
path = "tests/typeck/generics/type_bounds_validation.rs"

[[test]]
name = "typeck_explicit_type_args"
path = "tests/typeck/generics/explicit_type_args.rs"

[[test]]
name = "typeck_unification_failures"
path = "tests/typeck/generics/unification_failures.rs"

[[test]]
name = "typeck_nested_generics"
path = "tests/typeck/generics/nested_generics.rs"

[[test]]
name = "typeck_generic_di"
path = "tests/typeck/generics/generic_di.rs"

[[test]]
name = "typeck_monomorphization_spans"
path = "tests/typeck/generics/monomorphization_spans.rs"

[[test]]
name = "typeck_forward_references"
path = "tests/typeck/generics/forward_references.rs"

[[test]]
name = "typeck_recursive_generics"
path = "tests/typeck/generics/recursive_generics.rs"

# Typeck edge case tests - error propagation category
[[test]]
name = "typeck_propagation_chain"
path = "tests/typeck/errors/propagation_chain.rs"

[[test]]
name = "typeck_fixed_point_iteration"
path = "tests/typeck/errors/fixed_point_iteration.rs"

[[test]]
name = "typeck_fallible_builtins"
path = "tests/typeck/errors/fallible_builtins.rs"

[[test]]
name = "typeck_generic_error_sets"
path = "tests/typeck/errors/generic_error_sets.rs"

[[test]]
name = "typeck_unhandled_errors"
path = "tests/typeck/errors/unhandled_errors.rs"

[[test]]
name = "typeck_propagate_on_infallible"
path = "tests/typeck/errors/propagate_on_infallible.rs"

[[test]]
name = "typeck_select_errors"
path = "tests/typeck/errors/select_errors.rs"

[[test]]
name = "typeck_task_error_tracking"
path = "tests/typeck/errors/task_error_tracking.rs"

# Typeck edge case tests - statement checking category
[[test]]
name = "typeck_unreachable_code"
path = "tests/typeck/statements/unreachable_code.rs"

[[test]]
name = "typeck_return_path_analysis"
path = "tests/typeck/statements/return_path_analysis.rs"

[[test]]
name = "typeck_break_continue_validation"
path = "tests/typeck/statements/break_continue_validation.rs"

[[test]]
name = "typeck_variable_redeclaration"
path = "tests/typeck/statements/variable_redeclaration.rs"

[[test]]
name = "typeck_assignment_validation"
path = "tests/typeck/statements/assignment_validation.rs"

[[test]]
name = "typeck_scope_violations"
path = "tests/typeck/statements/scope_violations.rs"

[[test]]
name = "typeck_control_flow_edges"
path = "tests/typeck/statements/control_flow_edges.rs"

# Typeck edge case tests - closure system category
[[test]]
name = "typeck_capture_validation"
path = "tests/typeck/closures/capture_validation.rs"

[[test]]
name = "typeck_closure_type_checking"
path = "tests/typeck/closures/type_checking.rs"

[[test]]
name = "typeck_lifting_errors"
path = "tests/typeck/closures/lifting_errors.rs"

[[test]]
name = "typeck_closures_in_expressions"
path = "tests/typeck/closures/in_expressions.rs"

[[test]]
name = "typeck_recursive_closures"
path = "tests/typeck/closures/recursive_closures.rs"

[[test]]
name = "typeck_closure_edge_cases"
path = "tests/typeck/closures/edge_cases.rs"

# Typeck edge case tests - method resolution category
[[test]]
name = "typeck_vtable_generation"
path = "tests/typeck/methods/vtable_generation.rs"

[[test]]
name = "typeck_trait_dispatch"
path = "tests/typeck/methods/trait_dispatch.rs"

[[test]]
name = "typeck_method_lookup"
path = "tests/typeck/methods/method_lookup.rs"

[[test]]
name = "typeck_method_overloading"
path = "tests/typeck/methods/overloading.rs"

[[test]]
name = "typeck_self_type_errors"
path = "tests/typeck/methods/self_type_errors.rs"

[[test]]
name = "typeck_method_visibility"
path = "tests/typeck/methods/visibility.rs"

# Typeck edge case tests - DI graph category
[[test]]
name = "typeck_topological_sort"
path = "tests/typeck/di_graph/topological_sort.rs"

[[test]]
name = "typeck_cycle_detection"
path = "tests/typeck/di_graph/cycle_detection.rs"

[[test]]
name = "typeck_scoping_errors"
path = "tests/typeck/di_graph/scoping_errors.rs"

[[test]]
name = "typeck_dependency_resolution"
path = "tests/typeck/di_graph/dependency_resolution.rs"

[[test]]
name = "typeck_app_validation"
path = "tests/typeck/di_graph/app_validation.rs"

# Typeck edge case tests - scope & variables category
[[test]]
name = "typeck_shadowing"
path = "tests/typeck/scope_vars/shadowing.rs"

[[test]]
name = "typeck_lifetime_errors"
path = "tests/typeck/scope_vars/lifetime_errors.rs"

[[test]]
name = "typeck_scope_resolution"
path = "tests/typeck/scope_vars/scope_resolution.rs"

[[test]]
name = "typeck_variable_capture"
path = "tests/typeck/scope_vars/variable_capture.rs"

[[test]]
name = "typeck_temporal_errors"
path = "tests/typeck/scope_vars/temporal_errors.rs"

[[bench]]
name = "compile_time"
harness = false
