[workspace]
members = [".", "sdk", "mcp"]
exclude = ["tests/fixtures/test_math_crate", "examples/rust_ffi/my_math"]
resolver = "2"

[package]
name = "plutoc"
version = "0.1.0"
edition = "2024"

[dependencies]
logos = "0.14"
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
clap = { version = "4", features = ["derive"] }
ariadne = "0.4"
thiserror = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
bincode = { version = "2", features = ["serde"] }
notify = "6.1"
crossbeam-channel = "0.5"
clearscreen = "2.0"
nix = { version = "0.27", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
proptest = "1.0"
insta = "1.34"
criterion = "0.5"
arbitrary = "1.3"

[[test]]
name = "basics"
path = "tests/integration/basics.rs"

[[test]]
name = "operators"
path = "tests/integration/operators.rs"

[[test]]
name = "control_flow"
path = "tests/integration/control_flow.rs"

[[test]]
name = "strings"
path = "tests/integration/strings.rs"

[[test]]
name = "arrays"
path = "tests/integration/arrays.rs"

[[test]]
name = "classes"
path = "tests/integration/classes.rs"

[[test]]
name = "traits"
path = "tests/integration/traits.rs"

[[test]]
name = "enums"
path = "tests/integration/enums.rs"

[[test]]
name = "closures"
path = "tests/integration/closures.rs"

[[test]]
name = "di"
path = "tests/integration/di.rs"

[[test]]
name = "errors"
path = "tests/integration/errors.rs"

[[test]]
name = "generics"
path = "tests/integration/generics.rs"

[[test]]
name = "modules"
path = "tests/integration/modules.rs"

[[test]]
name = "mutability"
path = "tests/integration/mutability.rs"

[[test]]
name = "prelude"
path = "tests/integration/prelude.rs"

[[test]]
name = "gc"
path = "tests/integration/gc.rs"

[[test]]
name = "maps"
path = "tests/integration/maps.rs"

[[test]]
name = "sets"
path = "tests/integration/sets.rs"

[[test]]
name = "numeric"
path = "tests/integration/numeric.rs"

[[test]]
name = "fs"
path = "tests/integration/fs.rs"

[[test]]
name = "testing"
path = "tests/integration/testing.rs"

[[test]]
name = "stdlib_tests"
path = "tests/integration/stdlib_tests.rs"

[[test]]
name = "json_tests"
path = "tests/integration/json_tests.rs"

[[test]]
name = "http_tests"
path = "tests/integration/http_tests.rs"

[[test]]
name = "rust_ffi"
path = "tests/integration/rust_ffi.rs"

[[test]]
name = "concurrency"
path = "tests/integration/concurrency.rs"

[[test]]
name = "bytes"
path = "tests/integration/bytes.rs"

[[test]]
name = "channels"
path = "tests/integration/channels.rs"

[[test]]
name = "manifest"
path = "tests/integration/manifest.rs"

[[test]]
name = "contracts"
path = "tests/integration/contracts.rs"

[[test]]
name = "io"
path = "tests/integration/io.rs"

[[test]]
name = "di_lifecycle"
path = "tests/integration/di_lifecycle.rs"

[[test]]
name = "warnings"
path = "tests/integration/warnings.rs"

[[test]]
name = "nullable"
path = "tests/integration/nullable.rs"

[[test]]
name = "sync"
path = "tests/integration/sync.rs"

[[test]]
name = "scope_blocks"
path = "tests/integration/scope_blocks.rs"

[[test]]
name = "system"
path = "tests/integration/system.rs"

[[test]]
name = "deterministic"
path = "tests/integration/deterministic.rs"

[[test]]
name = "stages"
path = "tests/integration/stages.rs"

[[test]]
name = "generators"
path = "tests/integration/generators.rs"

[[test]]
name = "wire"
path = "tests/integration/wire.rs"

[[test]]
name = "marshaling"
path = "tests/integration/marshaling.rs"

[[test]]
name = "ast"
path = "tests/property/ast.rs"

[[test]]
name = "error_snapshots"
path = "tests/integration/error_snapshots.rs"

[[test]]
name = "error_messages"
path = "tests/integration/error_messages.rs"

[[test]]
name = "lexer_tests"
path = "tests/integration/lexer_tests.rs"

[[test]]
name = "rpc"
path = "tests/integration/rpc.rs"

[[bench]]
name = "compile_time"
harness = false
