[package]
name = "plutoc-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }

[dependencies.plutoc]
path = ".."

[[bin]]
name = "lex"
path = "fuzz_targets/lex.rs"
test = false
doc = false

[[bin]]
name = "parse"
path = "fuzz_targets/parse.rs"
test = false
doc = false
