[package]
name = "pluto-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pluto-mcp"
path = "src/main.rs"

[dependencies]
plutoc-sdk = { path = "../sdk" }
plutoc = { path = ".." }
rmcp = { version = "0.14", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
tempfile = "3"
async-recursion = "1"
